generated/checkers/gen/AllGen-Misuse-ec1aae190c7729ffdd3603de311dc00f7ff988f9/build_logs/syntax-repair-08/build_stderr_2.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘const clang::Expr* {anonymous}::getCountedByExprFromAttr(const clang::CountedByAttr*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:34:27: error: ‘const class clang::CountedByAttr’ has no member named ‘getCountedBy’; did you mean ‘AT_CountedBy’?
   34 |         -> decltype(Attr->getCountedBy(), (const Expr *)nullptr) {
      |                           ^~~~~~~~~~~~
      |                           AT_CountedBy
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:34:27: error: ‘const class clang::CountedByAttr’ has no member named ‘getCountedBy’; did you mean ‘AT_CountedBy’?
   34 |         -> decltype(Attr->getCountedBy(), (const Expr *)nullptr) {
      |                           ^~~~~~~~~~~~
      |                           AT_CountedBy
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:38:27: error: ‘const class clang::CountedByAttr’ has no member named ‘getCountedByExpr’; did you mean ‘getCountedByField’?
   38 |         -> decltype(Attr->getCountedByExpr(), (const Expr *)nullptr) {
      |                           ^~~~~~~~~~~~~~~~
      |                           getCountedByField
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:38:27: error: ‘const class clang::CountedByAttr’ has no member named ‘getCountedByExpr’; did you mean ‘getCountedByField’?
   38 |         -> decltype(Attr->getCountedByExpr(), (const Expr *)nullptr) {
      |                           ^~~~~~~~~~~~~~~~
      |                           getCountedByField
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static const clang::FieldDecl* {anonymous}::getCountedByFieldFromAttr(const clang::CountedByAttr*)::Helper::f(const clang::CountedByAttr*, int)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:50:37: error: cannot convert ‘clang::IdentifierInfo*’ to ‘const clang::FieldDecl*’ in return
   50 |       return Attr->getCountedByField();
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~
      |                                     |
      |                                     clang::IdentifierInfo*
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPreCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:284:59: error: invalid conversion from ‘const clang::ento::MemRegion*’ to ‘const clang::ento::SubRegion*’ [-fpermissive]
  284 |   const FieldRegion *CountFR = RM.getFieldRegion(CountFD, ObjSuper);
      |                                                           ^~~~~~~~
      |                                                           |
      |                                                           const clang::ento::MemRegion*
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/BasicValueFactory.h:24,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/SValBuilder.h:24,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:2:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/MemRegion.h:1519:54: note:   initializing argument 2 of ‘const clang::ento::FieldRegion* clang::ento::MemRegionManager::getFieldRegion(const clang::FieldDecl*, const clang::ento::SubRegion*)’
 1519 |                                     const SubRegion* superRegion);
      |                                     ~~~~~~~~~~~~~~~~~^~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
